infrastructure/modules/ec2_jenkins/security_group.tf
# Security Group Settings:
resource "aws_security_group" "jenkins_security_group" {
    name = var.jenkins_security_group_name
    description = "Security Group For Jenkins Ec2 Instance."

    ingress {
        from_port   = 22
        to_port     = 22
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port   = 8080
        to_port     = 8080
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = var.jenkins_security_group_name
        }
}
